--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -16,14 +16,17 @@
 			<trans-unit id="tx_femanagerextended_domain_model_user.profession">
 				<source>profession</source>
 			</trans-unit>
-			<trans-unit id="tx_femanagerextended_domain_model_user.academic">
-				<source>academic</source>
+			<trans-unit id="tx_femanagerextended_domain_model_user.academictitle">
+				<source>academic title</source>
 			</trans-unit>
 			<trans-unit id="tx_femanagerextended_domain_model_user.workarea">
 				<source>workarea</source>
 			</trans-unit>
-			<trans-unit id="tx_femanagerextended_domain_model_user.other_title">
-				<source>other_title</source>
+			<trans-unit id="tx_femanagerextended_domain_model_user.othertitle">
+				<source>othertitle</source>
+			</trans-unit>
+			<trans-unit id="pleaseChooseTitle">
+				<source>Please choose your title</source>
 			</trans-unit>
 		</body>
 	</file>
