--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -16,14 +16,14 @@
             			<trans-unit id="tx_femanagerextended_domain_model_user.profession">
             				<source>profession</source>
             			</trans-unit>
-            			<trans-unit id="tx_femanagerextended_domain_model_user.academic">
-            				<source>academic</source>
+            			<trans-unit id="tx_femanagerextended_domain_model_user.academictitle">
+            				<source>academictitle</source>
             			</trans-unit>
             			<trans-unit id="tx_femanagerextended_domain_model_user.workarea">
             				<source>workarea</source>
             			</trans-unit>
-            			<trans-unit id="tx_femanagerextended_domain_model_user.other_title">
-            				<source>other_title</source>
+            			<trans-unit id="tx_femanagerextended_domain_model_user.othertitle">
+            				<source>othertitle</source>
             			</trans-unit>
 			
 			<trans-unit id="fe_users.tx_extbase_type.Tx_Femanagerextended_User">
